--- a/order-summary-component-main/index.html
+++ b/order-summary-component-main/index.html
@@ -1,37 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Frontend Mentor | Order summary card</title>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+  </head>
+  <body>
+    <main>
+      <div class="container">
+        <div class="card">
+          <img src="images/illustration-hero.svg" alt="" />
+        </div>
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Order summary card</title>
+        <div class="body-text">
+          <h1>Order Summary</h1>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+          <p>
+            <a href="#" class="fancy-line"
+              >You can now listen to millions of <br />
+              songs</a
+            >, audiobooks, and podcasts on<br />
+            any device anywhere you like!
+          </p>
+        </div>
+        <div class="mid">
+          <div class="mid-border">
+            <img class="rotate" src="./images/icon-music.svg" alt="" />
+            <div class="mid-text">
+              <h3>Annual Plan</h3>
+              <p>$59.99/year</p>
+            </div>
+            <a href="#">change</a>
+          </div>
+        </div>
 
-  Order Summary
-
-  You can now listen to millions of songs, audiobooks, and podcasts on any 
-  device anywhere you like!
-
-  Annual Plan
-  $59.99/year
-
-  Change
-
-  Proceed to Payment
-  Cancel Order
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+        <div class="btn">
+          <button class="submit-btn" href="#">Proceed to Payment</button>
+          <a href="#" class="cancel-btn">Cancel Order</a>
+        </div>
+      </div>
+    </main>
+    <footer>
+      <div class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by
+        <a
+          href="https://www.linkedin.com/in/nibras-shami-4bb544209/"
+          target="_blank"
+          >Nibras Shami</a
+        >.
+      </div>
+    </footer>
+  </body>
 </html>
