adding a main page

--- a/index.html
+++ b/index.html
@@ -2,11 +2,85 @@
 
 <html>
   <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./order-summary-component-main/images/favicon-32x32.png"
+    />
+
     <title>Frontend Projects</title>
   </head>
-  
-  <body>
-    <h1>Hello, Wolrd</h1>
-  </body>
 
+  <body>
+    <main>
+      <h1>Frontend Projects</h1>
+      <article>
+        Here i post all the challenges i compleated and add them here.
+      </article>
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <div class="card border border-0" style="width: 18rem">
+              <img
+                src="./order-summary-component-main/screenShots/screen1.png"
+                class="card-img-top"
+                alt="..."
+              />
+              <div class="card-body">
+                <h5 class="card-title text-center">Order Summary</h5>
+                <p class="card-text text-center">
+                  Order Summary landpage, simulates any plan browsing in a
+                  website in a simple way, with some interactive components
+                  inside it.
+                </p>
+              </div>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item">HTML</li>
+                <li class="list-group-item">CSS</li>
+              </ul>
+              <div class="card-body">
+                <div class="d-grid gap-2">
+                  <a
+                    class="btn btn-primary"
+                    type="button"
+                    href="./order-summary-component-main/index.html"
+                    target="_self"
+                  >
+                    Live Project
+                  </a>
+
+                  <a
+                    class="btn btn-primary"
+                    type="button"
+                    href="https://github.com/vreoo/frontend-mentor-challenges/tree/master/order-summary-component-main"
+                    target="_blank"
+                  >
+                    See Code
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
+    <footer>
+      <p>
+        All Projects were built by:
+        <a href="https://github.com/vreoo" target="_blank">Nibras Shami</a>
+      </p>
+    </footer>
+  </body>
 </html>
