--- a/order-summary-component-main/index.html
+++ b/order-summary-component-main/index.html
@@ -43,7 +43,7 @@
         </div>
 
         <div class="btn">
-          <button class="submit-btn" href="#">Proceed to Payment</button>
+          <button class="submit-btn">Proceed to Payment</button>
           <a href="#" class="cancel-btn">Cancel Order</a>
         </div>
       </div>
